working version, doesn't prepend or add new animals

--- a/index.html
+++ b/index.html
@@ -8,21 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0-11/css/all.min.css">
   <link rel="stylesheet" href="assets\css\style.css">
-  <title>Tech Giphies</title>
+  <title>Party Animals</title>
 
 
 <body>
-
-  <input id="searchText" type="text" placeholder="Search...">
-
-
-  <button id="searchGiphs" type="submit"> SUBMIT</button>
-
-  <div class="container"> </div>
-
-
-  <!--
-put in header  <style type="text/css">
+  
+<style type="text/css">
     button,
     div,
     form,
@@ -32,25 +23,25 @@ put in header  <style type="text/css">
   </style>
 
   <div class="container">
-    <h1>Movie Search</h1>
+    <h1>Party Animals</h1>
 
-    //Rendered Buttons will get Dumped Here
+    <!--Rendered Buttons will get Dumped Here-->
     <div id="buttons-view"></div>
 
-    <form id="movie-form">
-      <label for="movie-input">Add a Movie, Yo!</label>
-      <input type="text" id="movie-input">
+    <form id="animal-form">
+      <label for="animal-input">Find you favorite animal!</label>
+      <input type="text" id="animal-input">
       <br>
 
-      //Button triggers new movie to be added
-      <input id="add-movie" type="submit" value="Add another concept!">
+     <!--Button triggers new movie to be added-->
+      <input id="add-animal" type="submit" value="Add">
     </form>
 
-    // Movies will Get Dumped Here
-    <div id="movies-view"></div>
+    <!--Animals will Get Dumped Here-->
+    <div id="animal-view"></div>
 
   </div>
--->
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -58,3 +49,12 @@ put in header  <style type="text/css">
 </body>
 
 </html>
+
+<!--
+  <input id="searchText" type="text" placeholder="Search..."> 
+
+
+  <button id="searchGiphs" type="submit"> SUBMIT</button>
+
+  <div class="container"> </div>
+-->
