--- a/index.html
+++ b/index.html
@@ -28,17 +28,24 @@
     <!--Rendered Buttons will get Dumped Here-->
     <div id="buttons-view"></div>
 
+    <!--Search Bar -->
     <form id="animal-form">
-      <label for="animal-input">Find you favorite animal!</label>
-      <input type="text" id="animal-input">
+      <input
+      type="text" id="search" class ="form-control" placeholder="Search"/>
       <br>
 
-     <!--Button triggers new movie to be added-->
-      <input id="add-animal" type="submit" value="Add">
+     <!--Button triggers new animal to be added: OLD CODE
+      <input id="add-animal" type="submit" value="Add">-->
+<button class="btn btn-primary" id="submit-button">Search</button>
+
     </form>
 
-    <!--Animals will Get Dumped Here-->
-    <div id="animal-view"></div>
+    <!--Giphys will Get Dumped Here-->
+    <div id="animal-view">
+
+      
+    
+    </div>
 
   </div>
 
